[tool.poetry]
name = "discovery30303"
version = "0.3.2"
description = "Discover devices that respond on port 30303"
authors = ["J. Nick Koston <nick@koston.org>"]
readme = "README.md"
repository = "https://github.com/bdraco/discovery30303"
documentation = "https://discovery30303.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "discovery30303" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bdraco/discovery30303/issues"
"Changelog" = "https://discovery30303.readthedocs.io/changelog.html"

[tool.poetry.dependencies]
python = "^3.9"

# Documentation Dependencies
Sphinx = {version = "^4.0.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
myst-parser = {version = ">=0.16,<0.19", optional = true}

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.dev-dependencies]
black = "^24.8"
flake8 = "^7.1.1"
isort = "^5.10.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pyupgrade = "^3.19.1"
tox = "^3.20.1"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "discovery30303/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=discovery30303"

[tool.isort]
profile = "black"
known_first_party = ["discovery30303", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
