[project]
name = "discovery30303"
version = "0.3.3"
license = "Apache-2.0"
description = "Discover devices that respond on port 30303"
authors = [{ name = "J. Nick Koston", email = "nick@koston.org" }]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["classifiers", "dependencies", "optional-dependencies"]

[project.urls]
"Repository" = "https://github.com/bdraco/discovery30303"
"Documentation" = "https://discovery30303.readthedocs.io"
"Bug Tracker" = "https://github.com/bdraco/discovery30303/issues"
"Changelog" = "https://discovery30303.readthedocs.io/changelog.html"

[tool.poetry]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "discovery30303" },
]

[tool.poetry.dependencies]
python = "^3.9"

# Documentation Dependencies
Sphinx = {version = ">=4,<8", optional = true}
sphinx-rtd-theme = {version = ">=1,<4", optional = true}
myst-parser = {version = ">=0.16,<3.1", optional = true}

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.group.dev.dependencies]
black = "^25.1"
flake8 = "^7.2.0"
isort = "^6.0.1"
pytest = "^8.3.5"
pytest-cov = "^7.0.0"
pyupgrade = "^3.20.0"
tox = "^4.30.3"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
version_variable = "discovery30303/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=discovery30303"

[tool.isort]
profile = "black"
known_first_party = ["discovery30303", "tests"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
